--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Landing page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="header-nav">
+        <div>
+          <a href="#"><img src="public/4cars.png" alt="" /></a>
+          <nav>
+            <ul>
+              <li>
+                <a href="#"><span>ALUGUEL DE CARROS</span></a>
+              </li>
+              <li>
+                <a href="#"><span>MAIS SOLUÇÕES</span></a>
+              </li>
+              <li><a href="#">CONSULTAR RESERVA</a></li>
+              <li id="login">
+                <a href="#"
+                  ><i class="fa-solid fa-user-astronaut"></i
+                  ><span>ENTRAR/CADASTRAR</span></a
+                >
+              </li>
+            </ul>
+            <button><i class="fa-solid fa-bars"></i></button>
+          </nav>
+        </div>
+      </div>
+      <div id="header-reserve">
+        <div>
+          <div>
+            <input type="text" />
+            <input type="date" name="" id="" />
+            <input type="time" name="" id="" />
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
