--- a/index.html
+++ b/index.html
@@ -48,5 +48,43 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <img class="main-foto" src="./img/aaaaaa.png" alt="Fotos de CARROS">
+    </main>
+
+    <footer>
+      <div class="container-footer">
+        <div class="footer-redes-sociais">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-contatos">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-solid fa-circle-phone-flip"></i>Atendimento ao cliente</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-whatsapp"></i>Assistência 24horas</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  </footer>
+
   </body>
+
+
 </html>
