--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               </li>
               <li><a href="#">CONSULTAR RESERVA</a></li>
               <li id="login">
-                <a href="#"
+                <a class="pagina-login" href="login.html"  href="#"
                   ><i class="fa-solid fa-user-astronaut"></i
                   ><span>ENTRAR/CADASTRAR</span></a
                 >
@@ -52,22 +52,28 @@
     <main>
       <img class="main-foto" src="./img/aaaaaa.png" alt="Fotos de CARROS">
     </main>
+    <section class="sobreEmpresa" id="sobreNos">
+     <p> A 4Cars é uma empresa que tem surfado na onda dos apps de motoristas.</p> 
+     <p> Nossa proposta é oferecer carros para serem alugados por motoristas a um custo razoável, aumentando a oportunidade para quem não têm dinheiro para comprar um carro. </p>
+     <p> Venha fazer parte da 4Cars!</p>   
+   </section>
+
 
     <footer>
       <div class="container-footer">
         <div class="footer-redes-sociais">
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a target="_blank" href="https://pt-br.facebook.com/" href="#"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a target="_blank" href="https://www.instagram.com/" href="#"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a target="_blank" href="https://twitter.com/?lang=pt-br" href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a target="_blank" href="https://www.youtube.com/" href="#"><i class="fa-brands fa-youtube"></i></a>
             </li>
           </ul>
         </div>
