Adicionado os cards e estilizado

--- a/index.html
+++ b/index.html
@@ -50,13 +50,61 @@
     </header>
 
     <main>
-      <img class="main-foto" src="./img/aaaaaa.png" alt="Fotos de CARROS">
+      <div class="container-card">
+        <div class="card" >
+          <img src="./img/NUNS.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/PJRS.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/RE4D.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/S10X.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/SPIX.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/STDA.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/TIGX.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/TO4D.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>
+        <div class="card" >
+          <img src="./img/TORA.png" alt="Foto de um veículo">
+          <h3>dasdasdasdsa</h3>
+        </div>      
+      </div>
+
+      <section class="sobreEmpresa" id="sobreNos">
+          <img src="./img/Logo 4Cars.png" alt="Logo 4 Cars">
+        
+        <div class="frase-sobrenos">
+          <h2>A 4Cars é uma empresa que tem surfado na onda dos apps de motoristas.
+               Nossa proposta é oferecer carros para serem alugados por motoristas a um custo razoável, aumentando a oportunidade para quem não têm dinheiro para comprar um carro.
+               Venha fazer parte da 4Cars!
+          </h2>
+        </div>   
+      </section>
     </main>
-    <section class="sobreEmpresa" id="sobreNos">
+    <!-- <section class="sobreEmpresa" id="sobreNos">
      <p> A 4Cars é uma empresa que tem surfado na onda dos apps de motoristas.</p> 
      <p> Nossa proposta é oferecer carros para serem alugados por motoristas a um custo razoável, aumentando a oportunidade para quem não têm dinheiro para comprar um carro. </p>
      <p> Venha fazer parte da 4Cars!</p>   
-   </section>
+   </section> -->
 
 
     <footer>
@@ -86,6 +134,13 @@
               <a href="#"><i class="fa-brands fa-whatsapp"></i>Assistência 24horas</a>
             </li>
           </ul>
+        </div>
+        <div>
+          <!-- <section class="sobreEmpresa" id="sobreNos">
+            <h4> A 4Cars é uma empresa que tem surfado na onda dos apps de motoristas.</h4> 
+            <h4> Nossa proposta é oferecer carros para serem alugados por motoristas a um custo razoável, aumentando a oportunidade para quem não têm dinheiro para comprar um carro. </h4>
+            <h4> Venha fazer parte da 4Cars!</h4>   
+          </section> -->
         </div>
       </div>
   </footer>
