--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
     <title>ENTRAR/CADASTRAR</title>
 </head>
 <body>
@@ -31,10 +31,11 @@
             </div>
         </fieldset> 
         <!-- Botão para acessar o cadastro -->
-        <button class="botao" type="submit" onsubmit="">Entrar</button>
+    
+        <button class="botao" type="submit" onsubmit="">Registrar-se</button>
 
         <!--Botão para criar novo cadastro-->
-        <button class="botaoR" type="submit" onsubmit="">Registrar</button>            
+        <button class="botaoR" type="submit" onsubmit="">Entrar</button>            
 
     </form>
 
